@@ -1,6 +1,7 @@
 15/11/2011 Changes
 
 Working on blocks within blocks. A few compiler issues.
+Made whileTrue: / whileFalse: on BlockClosures primitive.
 
 
 14/11/2011 Changes
